[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Util/WinCondition.gd" type="Script" id=1]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/PanelContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 432, -179 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "level_complete"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/PanelContainer:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 432, -179 ), Vector2( 432, 270 ), Vector2( 432, 223 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="WinCondition" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="PanelContainer" type="PanelContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -479.0
margin_right = 80.0
margin_bottom = -325.0
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 153.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/PanelContainer/VBoxContainer"]
margin_right = 146.0
margin_bottom = 28.0
text = "A winner is you!"

[node name="Control" type="Control" parent="Control/PanelContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 146.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 32 )

[node name="BtnNextLevel" type="Button" parent="Control/PanelContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 146.0
margin_bottom = 102.0
text = "Next Level"

[node name="BtnLevelSelector" type="Button" parent="Control/PanelContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 146.0
margin_bottom = 140.0
text = "Level Select"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/level_complete = SubResource( 6 )

[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/BtnNextLevel" to="." method="_on_BtnNextLevel_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/BtnLevelSelector" to="." method="_on_BtnLevelSelector_pressed"]
